# mastercraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: FindSDL2.cmake
include/app/: Config.hpp  Cube.hpp  Engine.hpp  Stats.hpp  World.hpp
include/cube/: Chunk.hpp  ChunkManager.hpp  ColumnGenerator.hpp  CubeData.hpp  CubeFace.hpp  CubeVertex.hpp  SuperChunk.hpp  TreeGenerator.hpp
include/entity/: EntityVertex.hpp  IEntity.hpp  Skybox.hpp  Sun.hpp
include/misc/: FileReader.hpp  INonCopyable.hpp  ISingleton.hpp  Image.hpp  Noise.hpp
include/shader/: Cubemap.hpp  Shader.hpp  ShaderCubemap.hpp  ShaderTexture.hpp  Texture.hpp
include/tool/: Camera.hpp  ImGuiHandler.hpp  Input.hpp  Rendered.hpp  Window.hpp
include/world/: Chunk.hpp  ChunkManager.hpp  ColumnGenerator.hpp  CubeData.hpp  CubeFace.hpp  CubeVertex.hpp  SuperChunk.hpp  TreeGenerator.hpp
libs/imgui/: CMakeLists.txt
libs/imgui/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_widgets.cpp
libs/libcpuid/: CMakeLists.txt
libs/libcpuid/docs/html/: amd__code__t_8h_source.html  annotated.html  asm-bits_8h_source.html  classes.html  cpuid_tool.html  dir_03e56439fbed355d69b62e7d15644605.html  dir_b6f5ced2c82f4345d1d68349794f4f92.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  group__libcpuid.html  index.html  intel__code__t_8h_source.html  libcpuid_8h.html  libcpuid_8h_source.html  libcpuid__constants_8h_source.html  libcpuid__internal_8h_source.html  libcpuid__types_8h_source.html  libcpuid__util_8h_source.html  menudata.js  modules.html  pages.html  rdtsc_8h_source.html  recog__amd_8h_source.html  recog__intel_8h_source.html  structcpu__epc__t.html  structcpu__id__t.html  structcpu__list__t.html  structcpu__mark__t.html  structcpu__raw__data__t.html  structcpu__sgx__t.html  structfeature__map__t.html  structinternal__id__info__t.html  structmatch__entry__t.html
libs/libcpuid/docs/latex/: annotated.tex  cpuid_tool.tex  files.tex  group__libcpuid.tex  index.tex  libcpuid_8h.tex  modules.tex  refman.tex  structcpu__epc__t.tex  structcpu__id__t.tex  structcpu__list__t.tex  structcpu__mark__t.tex  structcpu__raw__data__t.tex  structcpu__sgx__t.tex  structfeature__map__t.tex  structinternal__id__info__t.tex  structmatch__entry__t.tex
libs/libcpuid/docs/man/man3/: cpu_epc_t.3  cpu_id_t.3  cpu_list_t.3  cpu_mark_t.3  cpu_raw_data_t.3  cpu_sgx_t.3  cpuid_tool.3  feature_map_t.3  internal_id_info_t.3  libcpuid.3  libcpuid.h.3  match_entry_t.3
libs/libcpuid/libcpuid/: CMakeLists.txt
shader/: cube.fs.glsl  cube.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  sun.fs.glsl  sun.vs.glsl
src/: main.cpp
src/app/: Config.cpp  Cube.cpp  Engine.cpp  Stats.cpp  World.cpp
src/cube/: Chunk.cpp  ChunkManager.cpp  ColumnGenerator.cpp  CubeFace.cpp  CubeVertex.cpp  SuperChunk.cpp  TreeGenerator.cpp
src/entity/: EntityVertex.cpp  IEntity.cpp  Skybox.cpp  Sun.cpp
src/misc/: FileReader.cpp  Image.cpp
src/shader/: Cubemap.cpp  Shader.cpp  ShaderCubemap.cpp  ShaderTexture.cpp  Texture.cpp
src/tool/: Camera.cpp  Input.cpp  (+2 more)
(+60 files in other folders)
